

add_executable(Waiting_by_mutex_lock waiting_by_mutex_lock.cpp)

add_executable(Condition_variable condition_variable.cpp)

add_executable(ThreadSafeQueue threadsafe_queue.cpp threadsafe_queue.h)

add_executable(FutureSimple future_simple.cpp)

add_executable(Async async.cpp)

add_executable(PackagedTask packaged_task.cpp)

add_executable(Promise promise.cpp)

add_executable(SequentialQuickSort sequential_quick_sort.cpp)