

add_executable(AtomicFlag atomic_flag.cpp)

add_executable(Synchronizing synchronizing.cpp)

add_executable(SeqCst seq_cst.cpp)

add_executable(Relaxed relaxed.cpp)

add_executable(RelaxedFull relaxed_full.cpp)

add_executable(AcquireRelease1 acquire_release1.cpp)

add_executable(AcquireRelease2 acquire_release2.cpp)

add_executable(Consume consume.cpp)

add_executable(Fence fence.cpp)